--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>How to Reach Me</title>
     <link rel="stylesheet" href="../P.folio/css/main.css">
- 
+    <link rel="stylesheet" href="../P.folio/css/main2.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
     </nav>
     </header>
     <main id="contact">
-        <h1 class="lg-heading1">Contact <span class="text-secondary">Me</span>
+        <h1 class="lg-heading">Contact <span class="text-secondary">Me</span>
         </h1>
         <h2 class="sm-heading">
             How you can reach me...
