--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
     <link rel="stylesheet" href="../P.folio/css/main.css">
+    <link rel="stylesheet" href="../P.folio/css/main2.css">
  
 </head>
 
@@ -39,7 +40,7 @@
     </nav>
     </header>
     <main id="about">
-        <h1 class="lg-heading1">About <span class="text-secondary">Me</span>
+        <h1 class="lg-heading">About <span class="text-secondary">Me</span>
         </h1>
         <h2 class="sm-heading">
            Let me tell you a few things...
