--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="../P.folio/css/main.css">
- 
+    <link rel="stylesheet" href="../P.folio/css/main2.css">
 </head>
 
 <body id="bg-img">
