--- a/work.html
+++ b/work.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Work</title>
     <link rel="stylesheet" href="../P.folio/css/main.css">
+    <link rel="stylesheet" href="../P.folio/css/main2.css">
  
 </head>
 
@@ -39,7 +40,7 @@
     </nav>
     </header>
     <main id="work">
-        <h1 class="lg-heading1">My <span class="text-secondary">Work</span>
+        <h1 class="lg-heading">My <span class="text-secondary">Work</span>
         </h1>
         <h2 class="sm-heading">
             Works I have done...
