--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Web Designer, Information Analyst, Content Editor & Entrepreneur
         </h2>
         <div class="icons">
-            <a href="#">
+            <a href="https://www.facebook.com/lollyee/">
                 <img src="../P.folio/img/fb.png" width="23px" height="23px">
             </a>
             <a href="#">
@@ -54,7 +54,7 @@
             <a href="#">
                 <img src="../P.folio/img/linked-in.png" width="23px" height="23px">
             </a>
-            <a href="#">
+            <a href="https://web.whatsapp.com/08123348514/">
                 <img src="../P.folio/img/whatsapp.png" width="23px" height="23px">
             </a>
         </div>
